--- a/backup adm.html
+++ b/backup adm.html
@@ -16,7 +16,7 @@
     <section id="content-area" class="content-area">
         
     </section>
-</div> -->
+</div> 
 
 <script>
     function showContent(page) {
@@ -71,7 +71,7 @@
                 </form>
             `,
 
-            editar: `
+            /* editar: `
                 <h2>Editar Colaborador</h2>
                 <form onsubmit="buscarColaborador(event)" class="form-colaborador">
                     <div class="form-group">
@@ -137,7 +137,7 @@
                         <button type="button" onclick="cancelarEdicao()">Cancelar</button>
                     </div>
                 </form>
-            `,
+            `, */
 
             relatorio: "<h2>Relatórios</h2><p>Em breve!</p>"
         };
@@ -254,6 +254,6 @@
             });
         }
     });
-</script> 
+</script> -->
 
 {% endblock %}
